--- a/.gitignore
+++ b/.gitignore
@@ -30,6 +30,7 @@ bower_components
 
 # node-waf configuration
 .lock-wscript
+sftp.json
 
 # Compiled binary addons (https://nodejs.org/api/addons.html)
 build/Release
@@ -57,7 +58,7 @@ typings/
 .yarn-integrity
 
 # dotenv environment variables file
- .env
+.env
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
