--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
     "start": "nuxt start"
   },
   "dependencies": {
+    "@fortawesome/vue-fontawesome": "^2.0.8",
     "@nuxtjs/axios": "^5.12.2",
     "@nuxtjs/pwa": "^3.2.2",
-    "bcrypt": "^5.0.0",
+    "bcrypt": "^5.0.1",
     "bootstrap": "4.3.1",
     "chart.js": "^2.7.1",
     "colors": "^1.4.0",
@@ -24,6 +25,7 @@
     "dotenv": "^8.2.0",
     "element-ui": "^2.14.1",
     "es6-promise": "^4.1.1",
+    "export-from-json": "^1.7.0",
     "express": "^4.17.1",
     "fuse.js": "^3.2.0",
     "js-cookie": "^2.2.1",
@@ -31,8 +33,8 @@
     "mongoose": "^5.10.15",
     "mongoose-unique-validator": "^2.0.3",
     "morgan": "^1.10.0",
-    "mqtt": "^4.2.5",
-    "nuxt": "^2.14.7",
+    "mqtt": "^4.3.7",
+    "nuxt": "^2.15.8",
     "nuxt-highcharts": "^1.0.3",
     "perfect-scrollbar": "^1.3.0",
     "register-service-worker": "^1.5.2",
